--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <title>VanHier - Kerst Tetris</title>
+  <title>China Sponsor Spel</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
